# eth-qr-wallet

./: Cargo.toml  LICENSE  README.md
eth-qr-wallet/: Cargo.toml
eth-qr-wallet/src/: main.rs
eth_qr_wallet_sign/: Cargo.toml
eth_qr_wallet_sign/src/: erc20.rs  main.rs  signing.rs  ur.rs
eth_tx_create/: Cargo.toml
eth_tx_create/src/: main.rs
eth_tx_sign_offline/: .gitignore  Cargo.toml
eth_tx_sign_offline/src/: main.rs  qr.rs  signing.rs  ur.rs
