[package]
name = "eth-qr-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.1", default-features = false, features = [
  "consensus",
  "network",
  "signers",
  "signer-local",
  "rlp",
  "serde",
  "sol-types",
  "json",
] }
anyhow.workspace = true
bip32.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ur.workspace = true
ur-registry.workspace = true
qrcode.workspace = true
