[package]
name = "eth_qr_wallet_sign"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.11.1", default-features = false, features = [
  "consensus",
  "network",
  "signers",
  "signer-local",
  "rlp",
  "serde",
] }
anyhow.workspace = true
bip32.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ur.workspace = true
ur-registry.workspace = true
qrcode.workspace = true
